# TripIt-MCP

./: README.md  package.json  pyproject.toml  tripit_client.py  tsconfig.json  vitest.config.ts  wrangler.toml
src/: index.ts
src/lib/: errors.ts
src/mcp/: server.ts
src/mcp/tools/: index.ts  objects.ts  pro.ts  trips.ts
src/tripit/: client.ts  oauth.ts  types.ts
test/: errors.test.ts  integration.test.ts  mcp-server.test.ts  tools.test.ts
